--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -3,7 +3,7 @@
   padding: 20px;
   width: 210px;
   border-radius: 40px;
-  margin-right: 40px;
+  margin: 0 20px;
   margin-bottom: 30px;
   transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
 
