--- a/src/index.scss
+++ b/src/index.scss
@@ -112,6 +112,10 @@ header {
   .greenButton {
     position: relative;
 
+    &:disabled {
+      animation: button-loading 0.7s ease-in infinite;
+    }
+
     &:hover {
       img {
         transform: translateX(5px);
@@ -138,6 +142,11 @@ header {
   font-weight: 500;
   cursor: pointer;
   transition: background 0.1s ease-in-out;
+
+  &:disabled {
+    background-color: #bebebe !important;
+    cursor: default;
+  }
 
   &:hover {
     background: lighten(#9dd558, 5%);
@@ -234,5 +243,17 @@ header {
       margin-right: 15px;
       transition: all 0.2s ease-in-out;
     }
+  }
+}
+
+@keyframes button-loading {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 1;
   }
 }
